--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -1,4 +1,12 @@
-.carousel-inner img {
-  height: auto;
-  width: 100%;
+.item{
+    background: #333;    
+    text-align: center;
+    height: 450px !important;
+	
+	
+}
+.carousel{
+    margin-top: 10px;
+	height: 450px ;
+	margin-bottom: 25px;
 }
